added required modules to javac modules